Inserted softmax aggregator for 3 latents.

--- a/test_code/one_hot_encoder.ipynb
+++ b/test_code/one_hot_encoder.ipynb
@@ -208,6 +208,55 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/emanuele/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:3: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n",
+      "  This is separate from the ipykernel package so we can avoid doing imports until\n"
+     ]
+    }
+   ],
+   "source": [
+    "h = torch.ones( (10,3) )\n",
+    "\n",
+    "h_s = torch.nn.functional.softmax(h[:,:2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.5000, 0.5000, 1.0000],\n",
+       "        [0.5000, 0.5000, 1.0000],\n",
+       "        [0.5000, 0.5000, 1.0000],\n",
+       "        [0.5000, 0.5000, 1.0000],\n",
+       "        [0.5000, 0.5000, 1.0000],\n",
+       "        [0.5000, 0.5000, 1.0000],\n",
+       "        [0.5000, 0.5000, 1.0000],\n",
+       "        [0.5000, 0.5000, 1.0000],\n",
+       "        [0.5000, 0.5000, 1.0000],\n",
+       "        [0.5000, 0.5000, 1.0000]])"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.hstack((h_s, h[:,2].view(-1,1) ) ) "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
