Testing all latents fit.

--- a/test_code/loss_functions.ipynb
+++ b/test_code/loss_functions.ipynb
@@ -12,7 +12,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0.0951, 0.5755, 0.9443, 0.3994, 0.6150, 0.2281, 0.7349, 0.9077, 0.5992,\n",
+       "        0.6392])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.rand(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
