--- a/test_code/Interpretability.ipynb
+++ b/test_code/Interpretability.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.linear_model import LinearRegression, MultiTaskLasso, HuberRegressor\n",
     "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
        "(100, 3)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -39,33 +39,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = HuberRegressor(alpha=0.0001)\n",
+    "coeff = []\n",
+    "for i in range(len(gens[0])):\n",
+    "    model.fit(inputs, gens[:,i])\n",
+    "    coeff.append( model.coef_ )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "W = np.asarray(coeff)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None,\n",
-       "         normalize=False)"
+       "0.9162887490822329"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model = LinearRegression()\n",
-    "model.fit(inputs, gens)"
+    "model.score(inputs, gens)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
-    "W = model.coef_\n",
+    "\n",
     "R= W\n",
     "np.shape(W)\n",
     "R = np.abs(W)"
@@ -73,16 +93,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([3.0000000e+00, 4.4408921e-16, 2.0000000e+00])"
+       "array([2.00000000e+00, 2.01027357e-11, 1.00000000e+00, 1.00000000e+00])"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,16 +120,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([3., 2., 2.])"
+       "array([2., 2., 1., 1.])"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,16 +173,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.57149831, 0.3605697 , 0.3605697 ])"
+       "array([ 4.99855745e-01,  4.99855745e-01, -7.21309169e-05])"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,16 +194,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.42850169, 0.6394303 , 0.6394303 ])"
+       "array([0.50014426, 0.50014426, 1.00007213])"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,16 +214,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([2.25179981e+15, 2.25179981e+15, 2.50000000e-01, 2.50000000e-01])"
+       "array([5.00000000e-01, 5.00000000e-01, 9.99863226e-12])"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,16 +246,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "7.000000000000003"
+       "6.000000000089064"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,16 +266,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.42857143, 0.28571429, 0.28571429])"
+       "array([0.33333333, 0.33333333, 0.16666667, 0.16666667])"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,9 +286,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 122,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "shapes (3,) and (4,) not aligned: 3 (dim 0) != 4 (dim 0)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-122-9675050352c0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mD\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mH_D\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrho\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<__array_function__ internals>\u001b[0m in \u001b[0;36mdot\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: shapes (3,) and (4,) not aligned: 3 (dim 0) != 4 (dim 0)"
+     ]
+    }
+   ],
    "source": [
     "D = np.dot(1-H_D, rho)"
    ]
@@ -295,72 +328,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def Interpretability(z,g, rel_factors=10**4):\n",
-    "    \n",
+    "def Interpretability(z, g, rel_factors=10 ** 4):\n",
+    "    '''\n",
+    "    Compute the interpretability score of the latent factors given the generative ones.\n",
+    "    It can be done on a restricted number of entries.\n",
+    "    '''\n",
+    "\n",
     "    D = len(z[0])\n",
     "    K = len(g[0])\n",
-    "    \n",
-    "    model = LinearRegression()\n",
-    "    model.fit(z,g)\n",
-    "    \n",
-    "    R = np.abs( model.coef_ )\n",
-    "    \n",
-    "    R_g = np.sum(R, axis=0)\n",
-    "    \n",
-    "    P = np.zeros(np.shape(R))\n",
+    "\n",
+    "    model = HuberRegressor()\n",
+    "    coeff = np.zeros(shape=(D,K))\n",
+    "    total_acc = 0\n",
     "    for i in range(K):\n",
-    "        for j in range(D):\n",
-    "            P[i,j] = R[i,j]/(R_g[j]+10**-5)\n",
+    "        model.fit(z, g[:, i])\n",
+    "        coeff[:,i] = model.coef_\n",
+    "        total_acc += model.score(z,g[:,i])\n",
     "    \n",
+    "    print('# Interpret score # Total accuracy of Regressor model:', total_acc/K)\n",
+    "    # print('Regression score:',model.score(z,g)*100,'%')\n",
+    "\n",
+    "    R = np.abs(coeff)\n",
+    "\n",
+    "    R_g = np.sum(R, axis=0)\n",
+    "\n",
+    "    P = np.zeros(np.shape(R))\n",
+    "    for i in range(D):\n",
+    "        for j in range(K):\n",
+    "            P[i, j] = R[i, j] / (R_g[j] + 10 ** -6)\n",
+    "\n",
     "    H_D = np.zeros(K)\n",
     "    for j in range(K):\n",
-    "        H_D[j] = - np.sum( P[:,j] * np.log(P[:,j]+ 10**-5) ) \n",
-    "    \n",
-    "    I = 1 - H_D/np.log(D)\n",
-    "    \n",
-    "    rho = np.sum(R, axis=1)/np.sum(R)\n",
-    "    \n",
-    "    I_tot = np.sum(rho*I)\n",
-    "    \n",
-    "    return I, I_tot"
+    "        P[:, j] += 10 ** -6\n",
+    "        for i in range(D):\n",
+    "            if P[i, j] > 1: P[i, j] = 1\n",
+    "        H_D[j] = - np.sum(P[:, j] * np.log(P[:, j]))\n",
+    "\n",
+    "    I = 1 - H_D / np.log(D)\n",
+    "\n",
+    "    rho = np.sum(R, axis=0) / np.sum(R + 10 ** -6)\n",
+    "\n",
+    "    I_tot = np.sum(rho * I)\n",
+    "\n",
+    "    return I, I_tot, model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [],
    "source": [
-    "g = np.random.uniform(0,2, size=(100,2) )\n",
-    "W = np.array( [[1, 2], [1,1]]   )\n",
+    "g = np.random.uniform(0,2, size=(1000,2) )\n",
+    "W = np.array( [[1, 1,0,1], [0,1,0,0]]   )\n",
     "z = np.matmul(g,W)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 182,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# Interpret score # Total accuracy of Regressor model: 1.0\n"
+     ]
+    }
+   ],
    "source": [
-    "I, I_tot = Interpretability(z,g)"
+    "I, I_tot, my_model = Interpretability(z,g)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([8.17312715e-02, 2.66401662e-05])"
+       "array([0.49998029, 0.24998971])"
       ]
      },
-     "execution_count": 188,
+     "execution_count": 183,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,16 +427,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.03270849271499123"
+       "0.33331901613779646"
       ]
      },
-     "execution_count": 189,
+     "execution_count": 184,
      "metadata": {},
      "output_type": "execute_result"
     }
